parte 4 ... strings localizados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Workshop</string>
+    <string name="workshop_continue">Continuar</string>
 </resources>
