--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Android Workshop</string>
     <string name="workshop_continue">Continuar</string>
+    <string name="workshop_password">Contraseña</string>
+    <string name="workshop_user_name">Nombre de usuario</string>
 </resources>
