--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="workshop_continue">Continuar</string>
     <string name="workshop_password">Contraseña</string>
     <string name="workshop_user_name">Nombre de usuario</string>
+    <string name="workshop_welcome">Bienvenide %1$d a nuestro workshop!</string>
 </resources>
