--- a/app/src/main/res/values-en-rNZ/strings.xml
+++ b/app/src/main/res/values-en-rNZ/strings.xml
@@ -5,4 +5,5 @@
     <string name="workshop_password">Password</string>
     <string name="workshop_user_name">User name</string>
     <string name="workshop_welcome">Welcome %1$s to our workshop NZ!</string>
+    <string name="workshop_data_missing">Data missing</string>
 </resources>
